# Parametric-Sketcher

./: .gitignore  CMakeLists.txt  README.md
assets/: base_wall_mount_vc.stl  insert_wall_mount_vc.stl
src/: main.cpp
src/solid_model/: solid_model.cpp  solid_model.h
